--- a/estilos/index.css
+++ b/estilos/index.css
@@ -27,7 +27,12 @@ p, li {
 	letter-spacing: 1px;
 }
 
-img[src]{
+/**img[src]
+ * pegando por uma propriedade
+ * */
+
+
+#changeImg{
 	width: 200px;
 	display: block;
 	margin: 0 auto;
